<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwipeInvite</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Groups</string>
    <string name="title_section3">Messages</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_base_activity2">BaseActivity2</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_add_person2group">Add People</string>

    <!-- Add person to group -->
    <string name="add_person2group_editMessage">Name/Keyword</string>
    <string name="add_person2group_btn">Invite</string>

    <!-- User profile -->
    <string name="user_profile_username">Username :</string>
    <string name="user_profile_password">Password :</string>
    <string name="user_profile_name">Full Name :</string>
    <string name="user_profile_email">Email :</string>
    <string name="user_profile_gender">Gender :</string>
    <string name="user_profile_male">Male</string>
    <string name="user_profile_female">Female</string>
    <string name="user_profile_edit">  Edit  </string>
    <string name="title_activity_user_profile">My Profile</string>

    <!-- Group creation -->
    <string name="title_activity_group_creation">Add New Group</string>
    <string name="group_creation_name">Group Name: </string>
    <string name="group_creation_description">Description: </string>
    <string name="group_creation_addButton">Add people </string>
    <string name="group_creation_buildButton">Create </string>
    <string name="group_creation_type">Group type: </string>
    <string name="group_creation_private">private </string>
    <string name="group_creation_public">public </string>

    <!-- Search for group -->
    <string name="title_activity_search_group">Search Group</string>
    <string name="search_group_find">Search</string>
    <string name="search_group_name">Group Name/Keyword</string>
    <string name="search_group_request">Join</string>

    <!-- MENU ITEMS -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_start_up">StartUp</string>
    <string name="action_profile">My Profile</string>
    <string name="action_search_group">Search Group</string>
    <string name="action_event_creation">Create Event</string>
    <string name="action_leave_group">Leave</string>
    <!-- <string name="title_activity_login">LoginActivity</string> -->


    <!-- New Login Strings -->
    <string name="title_activity_login_activity2">Sign in</string>

    <!-- Login Stuff -->
    <string name="title_activity_login">Sign in</string>
    <string name="hint_login">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_button_text">Sign in</string>
    <string name="signup_button_text">New User</string>
    <string name="login_progress_signing_in">Signing in…</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="action_create_group">Create Group</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_group_edit">Edit Group</string>
    <string name="login_remember">Remember Me</string>

    <!-- GROUP CREATION STUFF -->
    <string name="group_create_status_message">Creating Group</string>
    <string name="title_activity_search_member">SearchMemberActivity</string>

    <!-- Logout Activity Strings -->
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="logout_prompt_text">Are you sure?</string>
    <string name="logout_button_text">Logout</string>
    <string name="logout_progress_signing_out">Signing out…</string>
    <string name="title_activity_new_user_login">NewUserLoginActivity</string>

    <!-- New User Login Activity Strings -->
    <string name="new_login_progress_signing_in">Creating new user…</string>
    <string name="username_hint_new_login">Username</string>
    <string name="name_hint_new_login">Common Name</string>
    <string name="email_hint_new_login">Email@service.com</string>
    <string name="password_hint_new_login">Password</string>
    <string name="create_user_button_text">Create</string>
    <string name="radio_text_male">Male</string>
    <string name="radio_text_female">Female</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_creation">Create Event</string>
    <string name="search_spec_member">Search</string>
    <string name="group_create_submit">Create Group</string>
    <string name="edit_group_add_members">Add members</string>
    <string name="edit_group_submit">Submit</string>
    <string name="user_profile_not_editable">Username is Not Editable</string>
    <string name="user_profile_full_name">Full Name</string>
    <string name="user_profile_gender_male">Male</string>
    <string name="user_profile_gender_female">Female</string>
    <string name="user_profile_submit">Submit</string>
    <string name="login_new_user">New User</string>
    <string name="login_sign_in">Sign In</string>
    <string name="drawer_layout_description">Navigation</string>

    <!-- pull down -->
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="refreshing">Refreshing…</string>
    <string name="not_updated_yet">not updated yet</string>
    <string name="updated_at">update at %1$s ago</string>
    <string name="updated_just_now">Just updated</string>
    <string name="time_error">time error</string>

    <!-- Drawer labels -->
    <string-array name="drawer_items">
        <item>Invites</item> <!--0-->
        <item>Events</item> <!--1-->
        <item>Groups</item> <!--2-->
        <item>Declined</item> <!--3-->
    </string-array>

    <string name="add_group2event">Add groups</string>
    <string name="event_creation_submit">Create Event</string>
    <string name="title_activity_forgot_password">Password Recovery</string>
    <string name="fragment_events_search_icon">Search Icon</string>

</resources>
