<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.team16.swipeinvite.UserProfileActivity" >

    <LinearLayout
        android:id="@+id/linearLayout_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	  		<TextView
	        android:id="@+id/textView_user_username"
	        android:layout_weight="3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/user_profile_username"
	        
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	  		
	  		
		    <EditText
		        android:id="@+id/editText_user_username"
		        android:layout_weight="7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
/>
		      
		        
    </LinearLayout>
    
     <LinearLayout
         android:id="@+id/linearLayout_profile_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
		    
 	  		<TextView
		        android:id="@+id/textView_user_password"
		        android:layout_weight="3"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/user_profile_password"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

 	  		<EditText
		        android:id="@+id/editText_user_password"
		        android:layout_weight="7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
 	  		    android:inputType="textPassword" >

 	  		  
 	  		</EditText>
		        
    </LinearLayout>

 	<LinearLayout
        android:id="@+id/linearLayout_profile_person_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
		    
 	  		<TextView
		        android:id="@+id/textView_user_name"
		        android:layout_weight="3"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		     
		        android:text="@string/user_profile_name"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

 	  		<EditText
		        android:id="@+id/editText_user_name"
		        android:layout_weight="7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
 	  		    android:inputType="textPersonName" />
      
    </LinearLayout>
    
 	
 	 	<LinearLayout
		        android:id="@+id/linearLayout_profile_email"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:orientation="horizontal">
		    
 	  		<TextView
		        android:id="@+id/textView_user_email"
		        android:layout_weight="3"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		     
		        android:text="@string/user_profile_email"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

 	  		<EditText
		        android:id="@+id/editText_user_email"
		        android:layout_weight="7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:inputType="textEmailAddress"/>

    	</LinearLayout>
    	
 	 	<LinearLayout
		        android:id="@+id/linearLayout_profile_gender"
		        android:layout_width="match_parent"
		        android:layout_height="80dp"
		        android:orientation="horizontal"
            android:layout_marginTop="10dp">

 	 		
		    
 	  		<TextView
		        android:id="@+id/textView_user_gender"
		        android:layout_weight="4"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/user_profile_gender"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="160dp">

                <RadioButton
                   android:id="@+id/Radiobutton_user_male"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                    android:layout_weight="2"
                   android:text="Male" />

                <RadioButton
                  android:id="@+id/Radiobutton_user_female"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="3"
                  android:text= "Female" />

            </RadioGroup>

        </LinearLayout>

    <Button

        android:id="@+id/button_user_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="Submit"
        android:layout_marginTop="40dp"
        android:layout_gravity="right" />


</LinearLayout>
