<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.team16.swipeinvite.LoginActivity2">

    <!-- Login progress -->
    <LinearLayout android:id="@+id/status_login"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ProgressBar style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/status_message_login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:fontFamily="sans-serif-light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login_progress_signing_in" />
    </LinearLayout>


    <!-- Login form -->
    <ScrollView
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/AppTheme">

        <LinearLayout style="@style/LoginFormContainer"
            android:orientation="vertical"
            android:layout_marginTop="130dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                android:layout_gravity="center"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:layout_gravity="center_horizontal"
                android:autoText="false"
                android:editable="true"
                android:hint="@string/hint_login"
                android:background="@drawable/textinputborder"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginTop="30dp"
                android:onClick="textFieldResponder"
                android:clickable="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password2"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/textinputborder"
                android:password="true"
                android:hint="@string/hint_password"
                android:layout_marginTop="10dp"
                android:onClick="textFieldResponder"
                android:clickable="true"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:id="@+id/login_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:nestedScrollingEnabled="false"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="loginResponder" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign up for SwipeInvite"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:clickable="true"
                android:onClick="newUserResponder"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forgot Password"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:clickable="true"

                />

        </LinearLayout>

    </ScrollView>


</merge>
